# republic

./: .gitignore  .syntastic_c_config  .valgrind.supp  Makefile  Makefile.in  configure.ac
inc/: common.h
inc/modules/scanner/: module.h  word_array.h
inc/test/: macros.h
inc/util/: linked_list.h  memory.h
scripts/: watch
src/modules/scanner/: module.c  word_array.c
src/util/: linked_list.c  memory.c
test/support/: classes.csv  training.csv  vocab.csv  vocab_file.g
